# mattermost-reactions

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  DEVELOPMENT.md  MODULE.bazel  Makefile  TESTING-GUIDE.md  dev-test.sh  docker-compose.dev.yml  go.mod  manifest.json  plugin.json  simple-webhook-receiver.js
server/: BUILD.bazel  activate_hooks.go  channel_hooks.go  configuration.go  http_hooks.go  plugin.go  reaction_hooks.go
webapp/: .swcrc  BUILD.bazel  package.json  pnpm-lock.yaml  tsconfig.json
webapp/src/: plugin.jsx
