module(
    name = "mattermost-reactions",
    version = "0.1.0",
)

### tools ###
bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")

### go ###

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")

# Allows developers to run
# bazel run @rules_go//go -- <args>
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gorilla_mux",
    "com_github_mattermost_mattermost_server_public",
    "com_github_pkg_errors",
    "com_github_stretchr_testify",
)

### javascript/typescript ###
bazel_dep(name = "rules_nodejs", version = "6.3.5")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.17.0")

bazel_dep(name = "aspect_rules_js", version = "2.3.7")

# Allows developers to run
# bazel run -- @pnpm//:pnpm --dir $PWD install --lockfile-only
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//webapp:.npmrc",
    pnpm_lock = "//webapp:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_ts", version = "3.6.0")
bazel_dep(name = "aspect_rules_swc", version = "2.1.0")
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//webapp:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")
