load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "webapp_lib",
    srcs = glob([
        "src/**/*.jsx",
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    allow_js = True,
    declaration = False,
    no_emit = True,
    resolve_json_module = True,
    transpiler = partial.make(
        swc,
        swcrc = "//webapp:.swcrc",
    ),
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
        ":node_modules/@types/react-intl",
        ":node_modules/@types/react-redux",
        ":node_modules/@types/react-router-dom",
        ":node_modules/core-js",
        ":node_modules/mattermost-redux",
        ":node_modules/prop-types",
        ":node_modules/react",
        ":node_modules/react-intl",
        ":node_modules/react-redux",
        ":node_modules/react-router-dom",
        ":node_modules/redux",
        ":node_modules/tslib",
        ":node_modules/typescript",
    ],
)
